--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -1,49 +1,39 @@
 [unix_http_server]
 file=/tmp/supervisor.sock
 
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
+[supervisorctl]
+serverurl = unix:///tmp/supervisor.sock
+
 [supervisord]
-logfile=/var/bluenote/var/log/supervisord_bluenode.log
+logfile=/var/log/supervisord_blueapp.log
 pidfile=/var/run/supervisord.pid                ; pidfile location
 nodaemon=false                                  ; run supervisord as a daemon
 minfds=1024                                     ; number of startup file descriptors
 minprocs=200                                    ; number of process descriptors
 user=root                                       ; default user
-childlogdir=/var/bluenote/var/log               ; where child log files will live
+childlogdir=/var/log                            ; where child log files will live
 
+[program:php7-fpm]
+priority = 10
+command=php-fpm7 -F
+autorestart=true
+startretries=3
 
-[rpcinterface:supervisor]
-supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
-
-[supervisorctl]
-serverurl = http://localhost:9001
-
-[program:influxdb]
-priority = 5
-command = /usr/bin/influxd
-process_name=influxdb
-autorestart = true
-startretries = 3
-
-[program:telegraf]
-priority = 8
-command = /usr/bin/telegraf
-process_name=telegraf
-autorestart = true
-
-[program:grafana]
-priority = 15
-command = /usr/local/bin/grafana-server --homepath=/var/grafana  --config=/var/grafana/conf/defaults.ini cfg:default.paths.data=/var/grafana/data
-process_name=grafana
-autostart = true
-autorestart = true
-startretries = 5
-user = root
+[program:nginx]
+priority = 10
+command=nginx -g 'daemon off;'
+autorestart=true
+startretries=3
+user=root
 
 [program:blueinit]
-priority = 10
+priority = 1
 command = /etc/bluenote/blueinit.sh
-process_name=bluenodeinit
-autostart = false
+process_name=blueappinit
 startsecs = 0
 autorestart = false
 startretries = 1
+user=root
