--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,51 +1,27 @@
 version: '3'
 services:
 
-  ### Bluenode Code Container #############################
-  bluenode:
-    build:
-      context: ./containers/bluenode
-      args:
-        - "INFLUXDB_NAME=${INFLUXDB_BLUEDB_NAME}"
-    container_name: bluenode
-    ports:
-     - "${GRAFANA_PORT}:3000"
-     - "8125:8125/udp"
-     - "8092:8092/udp"
-     - "8094:8094"
-     - "${INFLUXDB_PORT}:8086"
-    tty: true
-    network_mode: "bridge"
-    volumes:
-      - "${BLUENOTE_ROOT}:/var/bluenote"
-      - "${INFLUXDB_DATA}:/var/influxdb"
-      - "${GRAFANA_DATA}:/var/grafana/data"
 
 
-### Blueapp Management Container ##################################
-  blueapp:
+### DockPHPMySQL Management Container ##################################
+  dockpsql:
     build:
-      context: ./containers/blueapp
+      context: .
      # args:
      #   - PHP_UPSTREAM=php-fpm
-    container_name: blueapp
+    container_name: dockpsql
     environment:
       - MYSQL_DATABASE=${MYSQL_DATABASE}
       - MYSQL_USER=${MYSQL_USER}
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
     volumes:
-      - "${BLUEAPP_LOG_PATH}:/var/log"
-      - "${CONSOLE_DATA_SAVE_PATH}/mysql:/var/lib/mysql"
-    #  - "${CONSOLE_DATA_SAVE_PATH}/mysql:/var/mysql"
-     # - ${BLUEAPP_SITES_PATH}:/etc/nginx/sites-available
+      - "${DATA_SAVE_PATH}/mysql:/var/lib/mysql"
       - "${APPLICATION}:/var/www"
-      - "${BLUENOTE_ROOT}:/var/bluenote"
     ports:
       - "${NGINX_HOST_HTTP_PORT}:80"
       - "${NGINX_HOST_HTTPS_PORT}:443"
       - "${MYSQL_PORT}:3306"
     tty: true
-    links:
-      - "bluenode:bluenode"
+
     network_mode: "bridge"
