--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -8,7 +8,7 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl = unix:///tmp/supervisor.sock
 
 [supervisord]
-logfile=/var/log/supervisord_blueapp.log
+logfile=/var/log/supervisord_.log
 pidfile=/var/run/supervisord.pid                ; pidfile location
 nodaemon=false                                  ; run supervisord as a daemon
 minfds=1024                                     ; number of startup file descriptors
@@ -29,10 +29,10 @@ autorestart=true
 startretries=3
 user=root
 
-[program:blueinit]
+[program:dockinit]
 priority = 1
-command = /etc/bluenote/blueinit.sh
-process_name=blueappinit
+command = /etc/docker/dockinit.sh
+process_name=dockinit
 startsecs = 0
 autorestart = false
 startretries = 1
